--- a/Solar System Website/index.css
+++ b/Solar System Website/index.css
@@ -20,7 +20,7 @@
     background-color: lightsalmon;
         font-size: x-large;
      font-weight: bold;
-    color: white;
+    color: azure;
 }
 #content{
 margin-top: -15%;
